--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-  "setuptools==80.9",
-  "setuptools-scm==9.2",
+  "setuptools>=77",
+  "setuptools-scm[toml]>=6.2",
 ]
 
 [project]
